docs/_static/style.css
@import url('https://fonts.googleapis.com/css?family=Kalam|Montserrat:300');
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
@import url('https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css');

/*
 * Make body fill the viewport always
 */
body {
    position: relative;
    min-height: 100vh;
    height: 100%;
}

/*
 * Make the footer sticky to the bottom of the body.
 */
div.container-fluid.navbar-inverse.navbar-expand-lg, .navbar {
    min-height: auto;
    position: sticky;
    box-sizing: border-box;
    width: 100%;
    z-index: 9999999999999;
}

div.container-fluid.navbar-inverse.navbar-expand-lg {
    bottom: 0;
}

.navbar {
    top: 0;
}

.nav a {
    font-weight: bold;
}

#navbar.container {
    margin-left: 1em;
    margin-right: 1em;
}

a {
    color: #772953 !important;
}

a:hover {
    color: #511c39 !important;
}

#navbar {
    border-radius: 0px !important;

}

.navbar a, .footer a {
    color: #ccc !important;
}

.navbar a:hover, .footer a:active {
    color: #fff !important;
}

.dropdown-menu .caption {
    padding-left: 1em;
}

.dropdown-menu {
    color: #772953 !important;
    background-color: #fff !important;
}

.dropdown-menu a, .dropdown-menu .caption {
    color: #772953 !important;
}

.dropdown-menu a:hover {
    color: #511c39 !important;
}

.nav {
    font-family: 'Montserrat', sans-serif !important;
}

footer:before {
    margin-bottom: 1em;
}

footer.footer {
    margin-top: 1em;
    margin-bottom: 1em;
    font-weight: bold;
    border: 0;
    color: white;
}

code, .highlight {
    font-family: 'Fira Code', monospace;
    font-feature-settings: "calt" 1;
    font-variant-ligatures: contextual;
}

.navbar-brand, h1, h2, h3, h4, h5, h6 {
    font-family: 'Permanent Marker', cursive !important;
}

